# firmware.bmc.openbmc.applications.pld-managerd

./: README.md  meson.build  pld-manager.service.in
src/: pld_managerd.cpp
